# gueda

./: .gitignore  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  copia_arquivos.sh  funcoes.h  interface.h  main.c  objetos_interface.h
